# obsidian-rs

./: Cargo.toml  README.md
src/: community_plugin.rs  error.rs  lib.rs  obsidian.rs  plugin.rs  release.rs  utils.rs
vaults/Blank/.obsidian/: workspace.json
