[package]
name = "obsidian-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library for interacting with Obsidian vaults"
repository = "https://github.com/adamisrael/obsidian-rs"
license = "MIT"
authors = ["Adam Israel <adam@adamisrael.com>"]
readme = "README.md"

[dependencies]
flate2 = "1.1.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.0"
tar = "0.4.44"
uuid = { version = "1.16.0", features = ["v4"] }
